--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,41 @@
 </head>
 <body class="font-sans bg-slate-200">
     <div class="container">
-        <div class="bg-gradient-to-b from-[#0F0F33] to-[#050517] h-72">
-            <div class="pt-2 px-2">
+        <div class="bg-gradient-to-b from-[#0F0F33] to-[#050517] h-72 pb-11 md:h-max">
+            <div class="pt-2 px-2 md:px-36 md:pt-8">
             <nav class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <img src="../src/img/Logo.svg" alt="Logo" width="35px" srcset="">
-                    <h3 class="font-semibold text-white ml-2">Hoster</h3>
+                    <img src="../src/img/Logo.svg" alt="Logo" width="35px" class="md:w-10 md:h-10" srcset="">
+                    <h3 class="font-semibold text-white md:text-base ml-2">Hoster</h3>
                 </div>
-                <div>
+                <div class="md:block hidden">
+                    <ul class="flex space-x-8 text-slate-200 text-sm">
+                        <li>Home</li>
+                        <li>Product</li>
+                        <li>Support</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+                <button class="bg-white text-slate-900 text-sm py-3 px-6 rounded-full font-semibold md:block hidden">My Account</button>
+                <div class="md:hidden">
                     <img src="../src/img/side-bar.svg" width="25px" alt="" srcset="">
                 </div>
             </nav>
-            <h1 class="font-bold text-white text-2xl mt-5">Support Center</h1>
-            <p class="text-slate-300 text-xs mt-4 leading-5">Browse through our frequently asked questions, tutorials, and other self-help resources to find the answers you need.</p>
-            <form action="" class="mt-4">
-                <input class="text-sm p-1 relative focus:outline-none focus:ring-1 focus:ring-blue-600" type="search" placeholder="search" name="" id=""><button class="bg-blue-800 text-sm text-white p-1">Search</button>
+        <div class="grid grid-cols-2 relative">
+            <div class="">
+            <h1 class="font-bold text-white text-2xl mt-5 md:text-4xl md:mt-16">Support Center</h1>
+            <p class="text-slate-300 text-xs mt-4 leading-5 w-full md:text-base md:leading-7 md:w-11/12">Browse through our frequently asked questions, tutorials, and other self-help resources to find the answers you need.</p>
+            <form action="" class="mt-4 md:mt-6">
+                <input class="text-sm p-1 relative focus:outline-none focus:ring-1 focus:ring-blue-600 md:p-3 md:text-md md:w-4/5" type="search" placeholder="search" name="" id=""><button class="bg-blue-800 text-sm text-white p-1 md:py-3 md:px-5 md:text-sm">Search</button>
             </form>
-            <p class="text-slate-400 text-xs tracking-wider font-semibold mt-3">POPULAR : <br><span class="text-xs text-white underline mr-1">What is hosting?</span> <span class="text-xs text-white underline">Why my website is slow?</span> </p>
+            <p class="text-slate-400 text-xs tracking-wider font-semibold mt-3 md:text-sm md:mb-36 md:mt-5">POPULAR : <br class="md:hidden"><span class="text-xs text-white underline md:mx-3">What is hosting?</span> <span class="text-xs text-white underline">Why my website is slow?</span> </p>
+            </div>
+            
+            <div class="absolute -right-36 top-3 md:block hidden">
+                <img src="../src/img/Group 13.svg" alt="" srcset="">
+            </div>
+            
+            </div>
             </div>
         </div>
     </div>
