--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 </head>
 <body class="font-sans bg-slate-200">
     <div class="container">
+        <!--Header-->
         <div class="bg-gradient-to-b from-[#0F0F33] to-[#050517] h-72 pb-11 md:h-max">
             <div class="pt-2 px-2 md:px-36 md:pt-8">
+                <!--Navbar-->
             <nav class="flex items-center justify-between">
                 <div class="flex items-center">
                     <img src="../src/img/Logo.svg" alt="Logo" width="35px" class="md:w-10 md:h-10" srcset="">
@@ -29,7 +31,8 @@
                     <img src="../src/img/side-bar.svg" width="25px" alt="" srcset="">
                 </div>
             </nav>
-        <div class="grid grid-cols-2 relative">
+            <!--Header Text-->
+        <div class="md:grid md:grid-cols-2 md:relative">
             <div class="">
             <h1 class="font-bold text-white text-2xl mt-5 md:text-4xl md:mt-16">Support Center</h1>
             <p class="text-slate-300 text-xs mt-4 leading-5 w-full md:text-base md:leading-7 md:w-11/12">Browse through our frequently asked questions, tutorials, and other self-help resources to find the answers you need.</p>
@@ -44,6 +47,41 @@
             </div>
             
             </div>
+
+            </div>
+        </div>
+        <div class="pt-2 px-2 md:px-36 md:pt-8 md:my-8">
+            <!--Card Page-->
+            <div class="md:grid md:grid-cols-3">
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-Hosting.svg" class="w-10 h-10 md:w-14 md:h-14" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-lg">Introduction to hosting</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">What is web hosting?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Types of web hosting</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">How to choose a hosting provider</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Common hosting features to look for</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Pros and cons of different hosting types</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
             </div>
         </div>
     </div>
