--- a/public/index.html
+++ b/public/index.html
@@ -52,32 +52,177 @@
         </div>
         <div class="pt-2 px-2 md:px-36 md:pt-8 md:my-8">
             <!--Card Page-->
-            <div class="md:grid md:grid-cols-3">
+            <div class="md:grid md:grid-cols-3 md:gap-8">
             <!--card 1-->
-            <div class="bg-white p-2 border shadow-md rounded-md md:p-7">
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
                 <div class="flex items-center">
-                    <img src="../src/img/Logo-Hosting.svg" class="w-10 h-10 md:w-14 md:h-14" alt="" srcset="">
+                    <img src="../src/img/Logo-Hosting.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
                 <div class="ml-6 md:ml-4">
-                    <h3 class="font-bold md:text-lg">Introduction to hosting</h3>
+                    <h3 class="font-bold md:text-md">Introduction to hosting</h3>
                     <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
                 </div>
                 </div>
                 <div class="hidden md:block">
                     <!--Question 1-->
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">What is web hosting?</span>
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is web hosting?</span>
                     </div>
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Types of web hosting</span>
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Types of web hosting</span>
                     </div>
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">How to choose a hosting provider</span>
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to choose a hosting provider</span>
                     </div>
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Common hosting features to look for</span>
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Common hosting features to look for</span>
                     </div>
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-sm">Pros and cons of different hosting types</span>
+                        <img src="../src/img/Logo-doc.svg" class="mb-auto" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Pros and cons of different hosting types</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-Settings.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-md">Setting up a website</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to register a domain name</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to set up a hosting account</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to install and configure a CMS</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to upload and manage website ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Tips for optimizing website performa ...</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-Security.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-md">Security and privacy</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How hosting providers protect web ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is SSL and why is it important?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" class="mb-auto" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to secure a website with a firewall</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to protect sensitive information ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Tips for avoiding common security ...</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-Email.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-md">Email hosting</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is email hosting and why do ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to set up and configure email ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" class="mb-auto" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Tips for managing and organizing email</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to troubleshoot common email ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Pros and cons of different email ...</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-E-commerce.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-md">E-commerce hosting</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is e-commerce hosting and why ...</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to choose an e-commerce hosting</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" class="mb-auto" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Tips for setting up and managing</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">How to secure an e-commerce website</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Common e-commerce hosting features</span>
+                    </div>
+                </div>
+            </div>
+            <!--End Card-->
+            <!--card 1-->
+            <div class="bg-white p-2 border shadow-md rounded-md mt-5 md:p-7">
+                <div class="flex items-center">
+                    <img src="../src/img/Logo-Advance.svg" class="w-10 h-10 md:w-11 md:h-11" alt="" srcset="">
+                <div class="ml-6 md:ml-4">
+                    <h3 class="font-bold md:text-sm">Advanced hosting concepts</h3>
+                    <p class="text-xs text-slate-500 md:hidden">5 Questions</p>
+                </div>
+                </div>
+                <div class="hidden md:block">
+                    <!--Question 1-->
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is a server and how does it work?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is a DNS and how does it work?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" class="mb-auto" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is a CDN and how does it work?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is a load balancer?</span>
+                    </div>
+                    <div class="flex md:mt-5">
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is a reverse proxy?</span>
                     </div>
                 </div>
             </div>
