--- a/public/index.html
+++ b/public/index.html
@@ -229,6 +229,51 @@
             <!--End Card-->
             </div>
         </div>
+        <!--Before Footer-->
+        <div class="bg-slate-900 mt-7 rounded-tr-3xl">
+        <div class="pt-2 px-2 pb-4 md:px-36 md:pt-8">
+            <!--Chat Support-->
+            <div class="">
+            <h1 class="font-bold text-white text-base">Still have questions? We're here to help!</h1>
+            <p class="text-slate-400 text-xs my-2">Chat with our support team by clicking the chat button in the right. We're here to assist you!</p>
+            <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1">Chat Support</button>
+            </div>
+            <hr class="mt-3">
+            <!--Footer-->
+            <div class="grid grid-cols-3">
+                <div class="">
+                    <span class="text-slate-600 font-semibold tracking-wider text-xs">PRODUCTS</span>
+                    <ul class="text-xs text-slate-300">
+                        <li>Shared Hosting</li>
+                        <li>Virtual Private Server</li>
+                        <li>Domain</li>
+                        <li>Email Hosting</li>
+                    </ul>
+                </div>
+                <div class="">
+                    <span class="text-slate-600 font-semibold tracking-wider text-xs">COMPANY</span>
+                    <ul class="text-xs text-slate-300">
+                        <li>About Us</li>
+                        <li>Contact</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Service</li>
+                        <li>Help</li>
+                    </ul>
+                </div>
+                <div class="">
+                    <span class="text-slate-600 font-semibold tracking-wider text-xs">GET IN TOUCH</span>
+                    <ul class="text-xs text-slate-300">
+                        <li>Twitter</li>
+                        <li>Facebook</li>
+                        <li>Dribbble</li>
+                    </ul>
+                </div>
+            </div>
+            <!--copyright-->
+            <hr class="my-2">
+            <p class="text-xs text-center text-slate-400">COPYRIGHT © 2022 — DESIGN NAUVAL</p>
+        </div>
+        </div>
     </div>
 </body>
 </html>
