--- a/public/index.html
+++ b/public/index.html
@@ -233,10 +233,14 @@
         <div class="bg-slate-900 mt-7 rounded-tr-3xl">
         <div class="pt-2 px-2 pb-4 md:px-36 md:pt-8">
             <!--Chat Support-->
+            <div class="md:flex md:items-center md:justify-between">
             <div class="">
-            <h1 class="font-bold text-white text-base">Still have questions? We're here to help!</h1>
-            <p class="text-slate-400 text-xs my-2">Chat with our support team by clicking the chat button in the right. We're here to assist you!</p>
-            <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1">Chat Support</button>
+            <h1 class="font-bold text-white text-base md:text-2xl">Still have questions? We're here to help!</h1>
+            <p class="text-slate-400 text-xs my-2 md:text-lg md:w-3/4">Chat with our support team by clicking the chat button in the right. We're here to assist you!</p>
+            </div>
+            <div class="">
+            <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1 md:text-base md:py-4 md:px-7 md:rounded-xl">Chat Support</button>
+            </div>
             </div>
             <hr class="mt-3">
             <!--Footer-->
