--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
         <div class="bg-slate-900 mt-7 rounded-tr-3xl">
         <div class="pt-2 px-2 pb-4 md:px-36 md:pt-8">
             <!--Chat Support-->
-            <div class="md:flex md:items-center md:justify-between">
+            <div class="md:flex md:items-center md:justify-between md:my-6">
             <div class="">
             <h1 class="font-bold text-white text-base md:text-2xl">Still have questions? We're here to help!</h1>
             <p class="text-slate-400 text-xs my-2 md:text-lg md:w-3/4">Chat with our support team by clicking the chat button in the right. We're here to assist you!</p>
@@ -242,40 +242,49 @@
             <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1 md:text-base md:py-4 md:px-7 md:rounded-xl">Chat Support</button>
             </div>
             </div>
-            <hr class="mt-3">
+            <hr class="mt-3 md:hidden">
             <!--Footer-->
-            <div class="grid grid-cols-3">
+            <div class="flex md:my-6">
+            <div class="md:w-1/2 hidden md:block">
+                <div class="flex items-center md:mb-5">
+                    <img src="../src/img/Logo.svg" alt="Logo" width="35px" class="md:w-10 md:h-10" srcset="">
+                    <h3 class="font-semibold text-white md:text-base ml-2">Hoster</h3>
+                </div>
+                <p class="text-slate-400 text-sm">At Hoster, we believe that reliable, high-quality hosting should be accessible to everyone. That's why we offer a range of hosting plans to suit the needs of businesses and individuals alike. Our team of experts is always on hand to provide fast, friendly support, and we use the latest technology to ensure that your website is always up and running smoothly.</p>
+            </div>
+            <div class="grid grid-cols-3 md:gap-8 md:ml-28">
                 <div class="">
-                    <span class="text-slate-600 font-semibold tracking-wider text-xs">PRODUCTS</span>
-                    <ul class="text-xs text-slate-300">
+                    <span class="text-slate-400 font-semibold tracking-wider text-xs md:text-sm">PRODUCTS</span>
+                    <ul class="text-xs text-slate-300 md:text-base md:mt-4 md:text-slate-400">
                         <li>Shared Hosting</li>
-                        <li>Virtual Private Server</li>
-                        <li>Domain</li>
-                        <li>Email Hosting</li>
+                        <li class="md:mt-1">Virtual Private Server</li>
+                        <li class="md:mt-1">Domain</li>
+                        <li class="md:mt-1">Email Hosting</li>
                     </ul>
                 </div>
                 <div class="">
-                    <span class="text-slate-600 font-semibold tracking-wider text-xs">COMPANY</span>
-                    <ul class="text-xs text-slate-300">
+                    <span class="text-slate-400 font-semibold tracking-wider text-xs md:text-sm">COMPANY</span>
+                    <ul class="text-xs text-slate-300 md:text-base md:mt-4 md:text-slate-400">
                         <li>About Us</li>
-                        <li>Contact</li>
-                        <li>Privacy Policy</li>
-                        <li>Terms of Service</li>
-                        <li>Help</li>
+                        <li class="md:mt-1">Contact</li>
+                        <li class="md:mt-1">Privacy Policy</li>
+                        <li class="md:mt-1">Terms of Service</li>
+                        <li class="md:mt-1">Help</li>
                     </ul>
                 </div>
                 <div class="">
-                    <span class="text-slate-600 font-semibold tracking-wider text-xs">GET IN TOUCH</span>
-                    <ul class="text-xs text-slate-300">
+                    <span class="text-slate-400 font-semibold tracking-wider text-xs md:text-sm">GET IN TOUCH</span>
+                    <ul class="text-xs text-slate-300 md:text-base md:mt-4 md:text-slate-400">
                         <li>Twitter</li>
-                        <li>Facebook</li>
-                        <li>Dribbble</li>
+                        <li class="md:mt-1">Facebook</li>
+                        <li class="md:mt-1">Dribbble</li>
                     </ul>
                 </div>
             </div>
+            </div>
             <!--copyright-->
-            <hr class="my-2">
-            <p class="text-xs text-center text-slate-400">COPYRIGHT © 2022 — DESIGN NAUVAL</p>
+            <hr class="my-2 md:hidden">
+            <p class="text-xs text-center text-slate-400 md:mt-20 md:font-semibold">COPYRIGHT © 2022 — DESIGN NAUVAL</p>
         </div>
         </div>
     </div>
