Add icon for input and button

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,9 @@
             <div class="">
             <h1 class="font-bold text-white text-2xl mt-5 md:text-4xl md:mt-16">Support Center</h1>
             <p class="text-slate-300 text-xs mt-4 leading-5 w-full md:text-base md:leading-7 md:w-11/12">Browse through our frequently asked questions, tutorials, and other self-help resources to find the answers you need.</p>
+            <img src="../src/img/search.svg" class="hidden md:block absolute mt-9 ml-2 w-5 h-5 z-50" alt="">
             <form action="" class="mt-4 md:mt-6">
-                <input class="text-sm p-1 relative focus:outline-none focus:ring-1 focus:ring-blue-600 md:p-3 md:text-md md:w-4/5" type="search" placeholder="search" name="" id=""><button class="bg-blue-800 text-sm text-white p-1 md:py-3 md:px-5 md:text-sm">Search</button>
+                <input class="text-sm p-1 relative focus:outline-none focus:ring-1 focus:ring-blue-600 md:p-3 md:text-md md:w-4/5 md:pl-10 md:font-semibold md:text-slate-700" type="search" placeholder="Search" name="" id=""><button class="bg-blue-800 text-sm text-white p-1 md:py-3 md:px-5 md:text-sm">Search</button>
             </form>
             <p class="text-slate-400 text-xs tracking-wider font-semibold mt-3 md:text-sm md:mb-36 md:mt-5">POPULAR : <br class="md:hidden"><span class="text-xs text-white underline md:mx-3">What is hosting?</span> <span class="text-xs text-white underline">Why my website is slow?</span> </p>
             </div>
@@ -230,7 +231,7 @@
             </div>
         </div>
         <!--Before Footer-->
-        <div class="bg-slate-900 mt-7 rounded-tr-3xl">
+        <div class="bg-slate-900 mt-7 rounded-tr-3xl md:rounded-tr-[50px]">
         <div class="pt-2 px-2 pb-4 md:px-36 md:pt-8">
             <!--Chat Support-->
             <div class="md:flex md:items-center md:justify-between md:my-6">
@@ -238,8 +239,9 @@
             <h1 class="font-bold text-white text-base md:text-2xl">Still have questions? We're here to help!</h1>
             <p class="text-slate-400 text-xs my-2 md:text-lg md:w-3/4">Chat with our support team by clicking the chat button in the right. We're here to assist you!</p>
             </div>
-            <div class="">
-            <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1 md:text-base md:py-4 md:px-7 md:rounded-xl">Chat Support</button>
+            <div class="relative">
+            <img src="../src/img/Logo-chat.svg" class="hidden md:block absolute mt-5 ml-7" alt="" srcset="">
+            <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1 md:text-base md:py-4 md:px-7 md:pl-16 md:rounded-xl">Chat Support</button>
             </div>
             </div>
             <hr class="mt-3 md:hidden">
