--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                 <div class="hidden md:block">
                     <!--Question 1-->
                     <div class="flex md:mt-5">
-                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">What is web hosting?</span>
+                        <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs"> <a href="detail.html">What is web hosting?</a></span>
                     </div>
                     <div class="flex md:mt-5">
                         <img src="../src/img/Logo-doc.svg" alt="" srcset=""><span class="ml-2 font-semibold text-xs">Types of web hosting</span>
@@ -231,7 +231,7 @@
             </div>
         </div>
         <!--Before Footer-->
-        <div class="bg-slate-900 mt-7 rounded-tr-3xl md:rounded-tr-[50px]">
+        <div class="bg-slate-900 mt-7 rounded-tr-3xl md:rounded-tr-[50px] md:mt-24">
         <div class="pt-2 px-2 pb-4 md:px-36 md:pt-8">
             <!--Chat Support-->
             <div class="md:flex md:items-center md:justify-between md:my-6">
@@ -244,7 +244,7 @@
             <button class="bg-blue-800 p-3 rounded-sm text-xs text-white font-semibold mt-1 md:text-base md:py-4 md:px-7 md:pl-16 md:rounded-xl">Chat Support</button>
             </div>
             </div>
-            <hr class="mt-3 md:hidden">
+            <hr class="mt-3 md:border-slate-800">
             <!--Footer-->
             <div class="flex md:my-6">
             <div class="md:w-1/2 hidden md:block">
@@ -285,8 +285,8 @@
             </div>
             </div>
             <!--copyright-->
-            <hr class="my-2 md:hidden">
-            <p class="text-xs text-center text-slate-400 md:mt-20 md:font-semibold">COPYRIGHT © 2022 — DESIGN NAUVAL</p>
+            <hr class="my-2 md:border-slate-800">
+            <p class="text-xs text-center text-slate-400 md:mt-3 md:font-semibold">COPYRIGHT © 2022 — DESIGN NAUVAL</p>
         </div>
         </div>
     </div>
